feat(MainFragment): UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="unlimited_movies">Unlimited\nentertainment</string>
     <string name="All_of_Boatflix">All of Boatflix\n</string>
     <string name="go">GO</string>
+    <string name="Rectenly_Watched">Rectenly Watched</string>
 </resources>
